# qcor

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
compiler/: CMakeLists.txt  QCORCompiler.cpp  QCORCompiler.hpp  QCORCompilerActivator.cpp  QCorASTConsumer.hpp  QCorPluginASTAction.cpp  QCorPluginASTAction.hpp  QcorASTVisitor.hpp  QuantumKernelHandler.hpp  README.md  fuzzy_parsing.cpp  fuzzy_parsing.hpp  fuzzy_parsing.in.cpp  manifest.json  qcor-driver.in.cpp  qcor_ast_consumer.cpp  qcor_ast_consumer.hpp  qcor_ast_visitor.cpp  qcor_ast_visitor.hpp  qcor_clang_utils.hpp  qcor_frontend_action.cpp  qcor_frontend_action.hpp
compiler/clang/: CMakeLists.txt  FuzzyParsingExternalSemaSource.cpp  FuzzyParsingExternalSemaSource.hpp  LambdaVisitor.cpp  LambdaVisitor.hpp  QCORASTConsumer.cpp  QCORASTConsumer.hpp  QCORExternalSemaSource.hpp  QCORPluginAction.cpp  QCORPluginAction.hpp  QCORPragmaHandler.hpp  QCorASTConsumer.hpp  QCorPluginASTAction.cpp  QcorASTVisitor.hpp  QuantumKernelHandler.hpp  README.md  qcor-driver.in.cpp
compiler/old-clang/: CMakeLists.txt  FuzzyParsingExternalSemaSource.cpp  FuzzyParsingExternalSemaSource.hpp  LambdaVisitor.cpp  LambdaVisitor.hpp  QCORASTConsumer.cpp  QCORASTConsumer.hpp  QCORPluginAction.cpp  QCORPluginAction.hpp
compiler/tests/: CMakeLists.txt  QCORASTVisitorTester.in.cpp
examples/: CMakeLists.txt  README.md  add_3_5.cpp  add_kernels.cpp  bell_state.cpp  custom_objective_qcbm.cpp  ddcl_simple.cpp  deuteron.cpp  deuteronH2.cpp  deuteron_H2_expgen.cpp  deuteron_H2_from_fermion_expgen.cpp  deuteron_H3_expgen.cpp  deuteron_expgen.cpp  direct_kernel_exec.cpp  h2_hwe_vqe.cpp  h2_ucc1_expgen_vqe.cpp  h2_ucc1_vqe.cpp  h2_vqe.cpp  hwe_deuteron.cpp  hwe_for_loop_xasm_deuteron.cpp  objective_function.cpp  param_simple.cpp  task_initiate_deuteron_vqe.cpp  task_initiate_no_objfunc.cpp  task_initiate_no_observable.cpp  task_initiate_no_optimizer.cpp
examples/adapt/: adapt.cpp
examples/adder/: add_3_5.cpp
examples/adjoint_test/: show_adjoint.cpp
examples/argparse/: simple-explicit-parser.cpp  simple-implicit-parser.cpp
examples/arithmetic/: anc_allocate.cpp  integer_add.cpp  simple.cpp
examples/bell/: bell_control.cpp
examples/bernstein_vazirani/: bernstein_vazirani.cpp
examples/chemistry/: simple_h2_test_ucc1.cpp
examples/circuit_opt/: grover.cpp  grover_5.qasm
examples/compute_action_uncompute/: cau_capture_vars.cpp  compute_action_uncompute_h2_ucc1_example.cpp  multiple_in_kernel.cpp
examples/ctrl-gates/: ccx.cpp  hadamard_test.cpp  multiple_controls.cpp  simple_hadamard_test.cpp
examples/ddcl/: ddcl_ex.cpp  out
examples/deuteron/: as_unitary.cpp  deuteron_exp_inst.cpp  deuteron_task_initiate.cpp
examples/error_mitigation/: simple_mitiq.cpp
examples/fermi/: fermi_op.cpp  mixed_op.cpp
examples/ftqc_qrt/: bit-flip-code.cpp  ctrl_kernel.cpp  deuteron.cpp  error_correcting_code.cpp  five_qubit_qec_code.cpp  grover.cpp  integer_add.cpp  qalloc_ftqc.cpp  repeat-until-success.cpp  run-with-shots.cpp  simple-demo.cpp  steane_qec_code.cpp
examples/grover/: general_grover.cpp  grover.cpp
examples/hubbard/: hubbard_dimer.cpp
examples/hybrid/: adapt_h2.cpp  deuteron_h2_qaoa.cpp  deuteron_h2_qite.cpp  deuteron_h2_vqe.cpp  parameter_sweep.cpp  qaoa_with_vqe.cpp
examples/mirror_validation/: deuteron_validation.cpp  noise_model.json  validate_execution.cpp  validate_execution.py
examples/placement/: simplePlacement.cpp
examples/qaoa/: qaoa-builtin-circuit.cpp  qaoa_example.cpp
examples/qjit/: bell_jit.cpp  qcor_jit_test.cpp
examples/qpe/: qpe_callable_oracle.cpp  qpe_example_qrt.cpp  qpe_ham_op.cpp
examples/qpu_lambda/: d2_with_htest.cpp  deuteron.cpp  deuteron_lambda.cpp  deuteron_threaded.cpp  deuteron_vqe.cpp  deuteron_vqe_obj_func.cpp  deuteron_vqe_obj_func_threaded.cpp  deuteron_vqe_threaded.cpp  grover_lambda_oracle.cpp  lambda_test.cpp  lambda_test_bell.cpp  lambda_test_bell_threaded.cpp  lambda_with_compute_action.cpp
examples/qrt/: CMakeLists.txt  add_3_5.cpp  arithmetic.hpp  bell_multi_qreg.cpp  multiple_kernels.cpp  multiple_kernels_Bell_test.cpp  qaoa-builtin-circuit.cpp  qaoa_example.cpp  qft.hpp  qpe_example_qrt.cpp
examples/qsharp/: CMakeLists.txt  QirTarget.qs  bell.qs  bell_driver.cpp  driver.cpp  ghz_nisq.qs  ghz_nisq_driver.cpp  kernel_nisq.qs  kernel_nisq_driver.cpp  source.qs  test_array.cpp  test_array.qs  vqe_ansatz.qs  vqe_driver.cpp
examples/qsim/: AdaptVqeWorkflow.cpp  IterativeQpeVqe.cpp  QaoaWorkflow.cpp  QiteWorkflow.cpp  TdWorkflowHeisenbergModel.cpp  TrotterTdWorkflow.cpp  VerifiedQuantumPhaseEstimation.cpp  VqeWithAnsatzCircuit.cpp
examples/quasimo/: AdaptVqeWorkflow.cpp  IterativeQpeVqe.cpp  QiteWorkflow.cpp  TdWorkflowHeisenbergModel.cpp  TrotterTdWorkflow.cpp  VerifiedQuantumPhaseEstimation.cpp  VqeWithAnsatzCircuit.cpp  qite_3q_tfim.cpp
examples/quil/: simple-quil-deuteron.cpp
examples/shared/: arithmetic.hpp
examples/simple/: bell_threaded.cpp  gradients_optimization.cpp  mixed_language.cpp  multiple_kernels.cpp  period_finding.cpp  print_native_code.cpp  simple-objective-function-async.cpp  simple-objective-function-threaded.cpp  simple-objective-function.cpp
examples/temp_new_kernel/: test.cpp
examples/unitary/: ccnot.cpp
examples/xasm/: bell_multi_qreg.cpp  deuteronH2.cpp  deuteron_exp_inst.cpp  deuteron_pauli.cpp  deuteron_task_initiate_args_translation.cpp  hwe_ansatz_deuteron.cpp  objective_from_composite.cpp  objective_function.cpp  simple-objective-function.cpp  (+1 more)
handlers/: CMakeLists.txt  qcor_syntax_handler.cpp  qcor_syntax_handler.hpp
instructions/: CMakeLists.txt  QCORInstructionActivator.cpp  QcorInstructionActivatory.cpp  README.md  manifest.json
mlir/: CMakeLists.txt  README.md  qcor_mlir_api.cpp  qcor_mlir_api.hpp
python/: CMakeLists.txt  py-qcor.cpp  py_costFunctionEvaluator.hpp  py_qsimWorkflow.hpp  qcor.in.py  qcor.py
runtime/: CMakeLists.txt  algorithm.hpp  optimizer.hpp  qcor.cpp  qcor.hpp  qcor_lang_ext.hpp  qcor_version2.cpp  qcor_version2.hpp  qpu_handler.hpp  version.in
(+963 files in other folders)
